Trying to fix menu on mobile

--- a/content/style.css
+++ b/content/style.css
@@ -224,7 +224,7 @@ li:last-child {
     }
 
     #sidemenu {
-        margin-top: 56px;
+        position: fixed;
     }
 
     #bottombar {
